@@ -1,13 +1,17 @@
 package krutomaps.backend.service;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import krutomaps.backend.dto.*;
 import krutomaps.backend.entity.Realty;
+import krutomaps.backend.entity.Square;
+import krutomaps.backend.entity.SquareScore;
 import krutomaps.backend.repository.PlaceRepository;
 import krutomaps.backend.repository.RealtyRepository;
+import krutomaps.backend.repository.SquareScoreRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
@@ -16,16 +20,18 @@ import java.util.stream.Collectors;
 
 import jakarta.persistence.criteria.Predicate;
 
+import static krutomaps.backend.utils.DistanceCalculator.calculateDistance;
+
 @Service
 @RequiredArgsConstructor
 public class RealtyService {
 
+    private final ObjectMapper mapper = new ObjectMapper();
+
     private final RealtyRepository realtyRepository;
     private final PlaceRepository placeRepository;
-
-    private static final int BATCH_SIZE = 1000;
-    private static final double WANT_COEFFICIENT = 1.0;
-    private static final double DONT_COEFFICIENT = -3.0;
+    private final SquareScoreRepository squareScoreRepository;
+    private final SquareService squareService;
 
     @Cacheable("priceRange")
     public PriceRangeResponse getPriceRange() {
@@ -49,17 +55,28 @@ public class RealtyService {
                 .build();
     }
 
-    public RealtySelectionResponse findTop5ByCriteria(RealtySelectionRequest request) {
-        Specification<Realty> spec = buildSpecification(request);
-        Pageable page = PageRequest.of(0, 100);
-        List<Realty> candidates = realtyRepository.findAll(spec, page).getContent();
+    public RealtySelectionResponse findTop5ByCriteria(RealtySelectionRequest request) throws JsonProcessingException {
 
-        List<ScoredRealty> scoredList = calculateScores(candidates, request);
+        Square bestSquare = findBestSquare(request);
+        System.out.println(bestSquare.toString());
+
+        List<Square> searchSquares = squareService.getNeighborSquares(bestSquare, 1);
+
+        searchSquares.add(bestSquare);
+
+        Specification<Realty> spec = buildSpecification(request)
+                .and((root, query, cb) -> root.get("squareNum").in(
+                        searchSquares.stream().map(Square::getId).collect(Collectors.toList())
+                ));
+        List<Realty> candidates = realtyRepository.findAll(spec);
+
+        List<ScoredRealty> scoredList = calculateRealtyScores(candidates, request, bestSquare);
+
         List<Realty> topRealty = scoredList.stream()
-                .sorted((a, b) -> Double.compare(b.score(), a.score()))
+                .sorted(Comparator.comparingDouble(ScoredRealty::score).reversed())
                 .limit(5)
                 .map(ScoredRealty::realty)
-                .toList();
+                .collect(Collectors.toList());
 
         List<PlaceMarker> preferredPlaces = getPlacesForRubrics(request.getWantToSee(), "preferred");
         List<PlaceMarker> avoidedPlaces = getPlacesForRubrics(request.getDontWantToSee(), "avoided");
@@ -69,6 +86,108 @@ public class RealtyService {
                 .preferredPlaces(preferredPlaces)
                 .avoidedPlaces(avoidedPlaces)
                 .build();
+    }
+
+
+    private Square findBestSquare(RealtySelectionRequest request) {
+        return squareService.getAllSquares().stream()
+                .max(Comparator.comparingDouble(square -> {
+                    try {
+                        return calculateSquareSelectionScore(square, request);
+                    } catch (JsonProcessingException e) {
+                        throw new RuntimeException(e);
+                    }
+                }))
+                .orElseThrow(() -> new IllegalStateException("No squares found"));
+    }
+
+    private double calculateSquareSelectionScore(Square square, RealtySelectionRequest request) throws JsonProcessingException {
+
+        SquareScore squareScore = squareScoreRepository.findById(square.getId())
+                .orElseGet(() -> SquareScore.builder()
+                        .id(square.getId())
+                        .rubricScore("{}")
+                        .build());
+
+        Map<String, Double> rubricScores = mapper.readValue(
+                squareScore.getRubricScore(),
+                new TypeReference<>() {}
+        );
+
+        double totalScore = 0.0;
+
+        if (request.getWantToSee() != null) {
+            totalScore += request.getWantToSee().stream()
+                    .mapToDouble(rubric -> rubricScores.getOrDefault(rubric, 0.0))
+                    .sum();
+        }
+
+        if (request.getDontWantToSee() != null) {
+            totalScore -= request.getDontWantToSee().stream()
+                    .mapToDouble(rubric -> rubricScores.getOrDefault(rubric, 0.0))
+                    .sum();
+        }
+
+        return totalScore;
+    }
+
+    public record ScoredRealty(Realty realty, double score) {}
+
+    public List<ScoredRealty> calculateRealtyScores(List<Realty> candidates, RealtySelectionRequest request, Square bestSquare) {
+        List<Long> squareIds = candidates.stream()
+                .map(Realty::getSquareNum)
+                .distinct()
+                .toList();
+
+        List<SquareScore> squareScores = squareScoreRepository.findAllById(squareIds);
+
+        Map<Long, Map<String, Double>> rubricScoresMap = new HashMap<>();
+
+        for (SquareScore score : squareScores) {
+            try {
+                Map<String, Double> rubricScores = mapper.readValue(
+                        score.getRubricScore(),
+                        new TypeReference<>() {}
+                );
+                rubricScoresMap.put(score.getSquare().getId(), rubricScores);
+            } catch (JsonProcessingException e) {
+                throw new RuntimeException(e);
+            }
+        }
+
+        return candidates.parallelStream().map(realty -> {
+            double score = 0.0;
+
+            double distanceToCenter = calculateDistance(
+                    bestSquare.getCenter_lat(), bestSquare.getCenter_lon(),
+                    realty.getPointX(), realty.getPointY()
+            );
+            double distanceFactor = 1.0 / (1 + distanceToCenter);
+            score += distanceFactor;
+
+            Map<String, Double> rubricScores = rubricScoresMap.get(realty.getSquareNum());
+            if (rubricScores != null) {
+                if (request.getWantToSee() != null) {
+                    for (String rubric : request.getWantToSee()) {
+                        Double rubricScore = rubricScores.get(rubric);
+                        if (rubricScore != null) {
+                            score += rubricScore * distanceFactor;
+                        }
+                    }
+                }
+
+                if (request.getDontWantToSee() != null) {
+                    for (String rubric : request.getDontWantToSee()) {
+                        Double rubricScore = rubricScores.get(rubric);
+                        if (rubricScore != null) {
+                            score -= rubricScore * distanceFactor;
+                        }
+                    }
+                }
+            }
+
+            return new ScoredRealty(realty, score);
+        }).collect(Collectors.toList());
 
     }
 
@@ -77,9 +196,9 @@ public class RealtyService {
             return Collections.emptyList();
         }
 
-
-        String rubricsArray = "{" + rubrics.stream().map(r -> "\"" + r.replace("\"", "\\\"") + "\"").collect(Collectors.joining(",")) + "}";
-
+        String rubricsArray = "{" + rubrics.stream()
+                .map(r -> "\"" + r.replace("\"", "\\\"") + "\"")
+                .collect(Collectors.joining(",")) + "}";
 
         return placeRepository.findByRubrics(rubricsArray).stream()
                 .map(place -> PlaceMarker.builder()
@@ -93,73 +212,16 @@ public class RealtyService {
                         .build())
                 .collect(Collectors.toList());
     }
-
-    public record ScoredRealty(Realty realty, double score) {}
-
-    public List<ScoredRealty> calculateScores(List<Realty> candidates, RealtySelectionRequest request) {
-        List<Long> candidateIds = candidates.stream().map(Realty::getId).collect(Collectors.toList());
-
-        Map<Long, Map<String, Double>> wantDistances = getMinDistancesForRubrics(candidateIds, request.getWantToSee());
-        Map<Long, Map<String, Double>> dontWantDistances = getMinDistancesForRubrics(candidateIds, request.getDontWantToSee());
-
-        return candidates.parallelStream().map(candidate -> {
-            double score = 0.0;
-
-            if (candidate.getPoint_x() == null || candidate.getPoint_y() == null) {
-                return new ScoredRealty(candidate, Double.NEGATIVE_INFINITY);
-            }
-
-            if (request.getWantToSee() != null && !request.getWantToSee().isEmpty()) {
-                Map<String, Double> distances = wantDistances.getOrDefault(candidate.getId(), Collections.emptyMap());
-                for (String rubric : request.getWantToSee()) {
-                    Double minDist = distances.get(rubric);
-                    if (minDist != null) {
-                        score += WANT_COEFFICIENT / (1 + minDist / 1000);
-                    }
-                }
-            }
-
-            if (request.getDontWantToSee() != null && !request.getDontWantToSee().isEmpty()) {
-                Map<String, Double> distances = dontWantDistances.getOrDefault(candidate.getId(), Collections.emptyMap());
-                for (String rubric : request.getDontWantToSee()) {
-                    Double minDist = distances.get(rubric);
-                    if (minDist != null && minDist < 2000) {
-                        score += DONT_COEFFICIENT * (1 - minDist / 2000);
-                    }
-                }
-            }
-
-            return new ScoredRealty(candidate, score);
-        }).collect(Collectors.toList());
-    }
-
-
-    public Map<Long, Map<String, Double>> getMinDistancesForRubrics(List<Long> candidateIds, List<String> rubrics) {
-        Map<Long, Map<String, Double>> result = new HashMap<>();
-        for (int i = 0; i < candidateIds.size(); i += BATCH_SIZE) {
-            List<Long> batch = candidateIds.subList(i, Math.min(i + BATCH_SIZE, candidateIds.size()));
-            String rubricsArray = "{" + rubrics.stream().map(r -> "\"" + r.replace("\"", "\\\"") + "\"").collect(Collectors.joining(",")) + "}";
-            List<Object[]> batchResults = realtyRepository.findMinDistancesForRubrics(batch, rubricsArray);
-            for (Object[] row : batchResults) {
-                Long realtyId = (Long) row[0];
-                String rubric = (String) row[1];
-                Double minDist = (Double) row[2];
-                result.computeIfAbsent(realtyId, k -> new HashMap<>()).put(rubric, minDist);
-            }
-        }
-        return result;
-    }
-
     private Specification<Realty> buildSpecification(RealtySelectionRequest request) {
         return (root, query, cb) -> {
             List<Predicate> predicates = new ArrayList<>();
 
             if (request.getPriceFrom() != null && request.getPriceFrom() > 0) {
-                predicates.add(cb.ge(root.get("lease_price"), request.getPriceFrom()));
+                predicates.add(cb.ge(root.get("leasePrice"), request.getPriceFrom()));
             }
 
             if (request.getPriceTo() != null && request.getPriceTo() > 0) {
-                predicates.add(cb.le(root.get("lease_price"), request.getPriceTo()));
+                predicates.add(cb.le(root.get("leasePrice"), request.getPriceTo()));
             }
 
             String floorOption = request.getFloorOption();
@@ -173,19 +235,19 @@ public class RealtyService {
 
             List<String> placeOptions = request.getPlaceOptions();
             if (placeOptions != null && !placeOptions.contains("Любой")) {
-                predicates.add(root.get("segment_type").in(placeOptions));
+                predicates.add(root.get("segmentType").in(placeOptions));
             }
 
             if (request.getAreaFrom() != null && request.getAreaFrom() > 0) {
-                predicates.add(cb.ge(root.get("total_area"), request.getAreaFrom()));
+                predicates.add(cb.ge(root.get("totalArea"), request.getAreaFrom()));
             }
 
             if (request.getAreaTo() != null && request.getAreaTo() > 0) {
-                predicates.add(cb.le(root.get("total_area"), request.getAreaTo()));
+                predicates.add(cb.le(root.get("totalArea"), request.getAreaTo()));
             }
 
-            predicates.add(cb.isNotNull(root.get("point_x")));
-            predicates.add(cb.isNotNull(root.get("point_y")));
+            predicates.add(cb.isNotNull(root.get("pointX")));
+            predicates.add(cb.isNotNull(root.get("pointY")));
 
             return cb.and(predicates.toArray(new Predicate[0]));
         };
